# STOCK

./: CafeF.HNX.18.10.2022.csv  CafeF.HNX.21.10.2022.csv  CafeF.HNX.24.10.2022.csv  CafeF.HSX.18.10.2022.csv  CafeF.HSX.21.10.2022.csv  CafeF.HSX.24.10.2022.csv  CafeF.UPCOM.18.10.2022.csv  CafeF.UPCOM.21.10.2022.csv  CafeF.UPCOM.24.10.2022.csv  pyproject.toml
stocks/stocks/: settings.py
stocks/stocks/spiders/: meta_stocks.py  test.py
